# VDX12

./: .gitignore  CMakeLists.txt
C1_VectorAlgebra/: CMakeLists.txt  xmvec3.cpp
C2_MatrixAlgebra/: CMakeLists.txt
C4_Init/: CMakeLists.txt
Common/: CMakeLists.txt  _Test.cpp
VDX12_CMake/: CMakeLists.txt  VDX12_CMake.cpp  VDX12_CMake.h
