# CMakeList.txt : CMake project for VDX12_CMake, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (VDX12_CMake "VDX12_CMake.cpp" "VDX12_CMake.h")

# TODO: Add tests and install targets if needed.
